2002-06-04  Chris Blumenberg  <cblu@apple.com>

	* MIME.subproj/IFDownloadHandler.mm: Use public methods
	* WebView.subproj/IFWebDataSource.h: Made downloadPath public
	* WebView.subproj/IFWebDataSource.mm:
	(-[IFWebDataSource downloadPath]):
	* WebView.subproj/IFWebDataSourcePrivate.h:
	* WebView.subproj/IFWebDataSourcePrivate.mm:

2002-06-04  Richard Williamson  <rjw@apple.com>

    More exclusion for pre 6C48.

	* ChangeLog:
	* WebCoreSupport.subproj/IFImageRenderer.m:
	(-[IFImageRenderer incrementalLoadWithBytes:length:complete:]):
	* WebCoreSupport.subproj/IFImageRendererFactory.m:
	(-[IFImageRendererFactory imageRenderer]):

2002-06-04  Richard Williamson  <rjw@apple.com>

    Oops, excluded even more code for < 6C48.
    
	* WebCoreSupport.subproj/IFImageRenderer.m:
	(-[IFImageRenderer incrementalLoadWithBytes:length:complete:]):

2002-06-04  Kenneth Kocienda  <kocienda@apple.com>

	* Misc.subproj/WebKitDebug.h: Added a line of stderr output into 
        the assertion failure code so that we have some idea of what happened.

2002-06-04  Richard Williamson  <rjw@apple.com>

    Excluded call to new API until everyone has moved to >= 6C48.
    
	* WebCoreSupport.subproj/IFImageRenderer.m:
	(-[IFImageRenderer incrementalLoadWithBytes:length:complete:]):

2002-06-04  Richard Williamson  <rjw@apple.com>

    Changes to support progressive image loading.  Currently disabled
    until 2945218 is fixed.

	* WebCoreSupport.subproj/IFImageRenderer.h:
	* WebCoreSupport.subproj/IFImageRenderer.m:
	* WebCoreSupport.subproj/IFImageRendererFactory.m:

2002-06-04  Darin Adler  <darin@apple.com>

	- fixed 2932862 -- exception -[NSCFArray getObjects:range:]: index (137)
	beyond bounds (10)

	* WebView.subproj/IFWebViewPrivate.mm:
	(-[IFWebView _stopPlugins]):
	(-[IFWebView _removeSubviews]):
	Make a copy of the subviews list so that changes to the list don't screw
	up the iterating logic.

2002-06-04  John Sullivan  <sullivan@apple.com>
