@@ -1,3 +1,13 @@
+2002-06-05  Richard Williamson  <rjw@apple.com>
+
+    Normalized frame naming.  (We still don't support cross
+    window name lookups.)
+    
+	* WebView.subproj/IFBaseWebController.mm:
+	(-[IFBaseWebController frameNamed:]):
+	* WebView.subproj/IFWebFrame.mm:
+	(-[IFWebFrame frameNamed:]):
+
 2002-06-04  Chris Blumenberg  <cblu@apple.com>
 
 	* MIME.subproj/IFDownloadHandler.mm: Use public methods
